Bug 159996 - Dialogs editor don't show controls correctly
Summary: Dialogs editor don't show controls correctly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
24.2.1.2 release
Hardware: All All
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: BASIC-Dialog-Designer
  Show dependency treegraph
 
Reported: 2024-03-02 11:36 UTC by jcsanz
Modified: 2024-03-09 06:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A test document with a dialog (11.18 KB, application/vnd.oasis.opendocument.text)
2024-03-02 11:36 UTC, jcsanz
Details
screenshot showing the bug in ver 24.2 (51.63 KB, image/png)
2024-03-02 11:38 UTC, jcsanz
Details
Screeshot without the bug in ver 7.6 (54.96 KB, image/png)
2024-03-02 11:39 UTC, jcsanz
Details
Snapshot of bug on macOS with Dark Mode (588.52 KB, image/png)
2024-03-07 15:03 UTC, Patrick (volunteer)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jcsanz 2024-03-02 11:36:03 UTC
Description:
The controls in the basic dialog editor are not shown properly if versions of LO is 22.2 or higer.
Some of them "disappear" although in the properties it had default background and font. See attached image bad.png
Controls are shown properly in ver 7,6. See attached image good.png

Steps to Reproduce:
1.Open the attached document dialog.odt
2.Go to Tools > Macros > Edit to reach the basic and dialogs editor
3.Select the ChgPassword dialog in the editor

Actual Results:
Te controls in dialog are not shown properly

Expected Results:
Controls should be shown correctly


Reproducible: Always


User Profile Reset: No

Additional Info:
Bug is present with:

Version: 24.2.1.1 (X86_64) / LibreOffice Community
Build ID: 359ef544e625d2ffbfced462ab37bd593ca85fa7
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

---------------------
Bug is not present with:

Version: 7.6.5.2 (X86_64) / LibreOffice Community
Build ID: 38d5f62f85355c192ef5f1dd47c5c0c0c6d6598b
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 1 jcsanz 2024-03-02 11:36:45 UTC
Created attachment 192910 [details]
A test document with a dialog
Comment 2 jcsanz 2024-03-02 11:38:32 UTC
Created attachment 192911 [details]
screenshot showing the bug in ver 24.2
Comment 3 jcsanz 2024-03-02 11:39:09 UTC
Created attachment 192912 [details]
Screeshot without the bug in ver 7.6
Comment 4 Rafael Lima 2024-03-02 18:05:30 UTC
I can confirm the issue in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b0791dd9216224bdb266fd0d8c87df253b6d0583
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded

It seems that the controls are not getting the right colors. Seems like a regression to me.
Comment 5 raal 2024-03-05 17:35:21 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2$.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 c21a1c45e2403119c90af25cdb5350f978d5c93b is the first bad commit
commit c21a1c45e2403119c90af25cdb5350f978d5c93b
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jul 25 09:06:10 2023 +0200

    source 81994cb2b8b32453a92bcb011830fcb884f22ff3

114168: Convert internal vcl bitmap formats transparency->alpha (II) | https://gerrit.libreoffice.org/c/core/+/114168
Comment 6 Patrick (volunteer) 2024-03-07 15:03:02 UTC
Created attachment 193016 [details]
Snapshot of bug on macOS with Dark Mode
Comment 7 Patrick (volunteer) 2024-03-07 15:04:55 UTC
I can also reproduce this bug on macOS. Also, when running with Dark Mode, both the labels above and below the "New Password" label have black and white colors swapped as shown in attachment #193016 [details].
Comment 8 Roland Baudin 2024-03-07 15:41:32 UTC
Same issue in the TexMaths extension (that uses UI dialogs).
Always reproducible.
And this is a regression, introduced in LO 24.2.
Comment 9 Commit Notification 2024-03-07 23:58:25 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff113b34dd6f54765995440cbedd27483fadb844

tdf#159996 use transparent alpha mask for output device

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Patrick (volunteer) 2024-03-08 00:03:13 UTC
I have committed a fix this bug. The fix should be in tomorrow's (08 March 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master builds install in /Applications/LibreOfficeDev.app. These builds are not codesigned like regular LibreOffice releases so you will need to execute the following Terminal command after installation but before you launch /Applications/LibreOfficeDev:

xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 11 Commit Notification 2024-03-08 06:06:00 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/358eee88dd0af37ffc83c3abd9633593b758a5be

tdf#159996 use transparent alpha mask for output device

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Rafael Lima 2024-03-08 13:57:24 UTC
Verified with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1406e7b2f01a88377649c763cd65d20803c3c3a6
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded

Thanks @Patrick for the fix!
Comment 13 Commit Notification 2024-03-09 06:31:59 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-2":

https://git.libreoffice.org/core/commit/c4d42d7ffca8c8e1bfc6d23d5ca3b7553be5e78e

tdf#159996 use transparent alpha mask for output device

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.