tdf#159996 use transparent alpha mask for output device

Since commit 81994cb2b8b32453a92bcb011830fcb884f22ff3, fixed text
needs to be drawn to an output device with a transparent alpha
mask.

Change-Id: I2036e8c6c9133b1caceb24aeca40f04524c16b23
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164556
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 73c14fcf97a1dcc9c95c98f9223449957b0b4963)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164500
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>